# Cooperative-target-tracking

./: LICENSE  README.md
cotrack/: CMakeLists.txt  package.xml
cotrack/launch/: drone1.launch
cotrack/msg/: drone_state.msg
cotrack/src/ControlNode/: ControlNode.cpp  ControlNode.h  main_controlnode.cpp
cotrack/src/Cotrack/: bebop_singtrack.cpp  bebop_track1.cpp  bebop_track2.cpp  bebop_track3.cpp  bebop_track4.cpp  statemachine_node.cpp  中期答辩.ppt
cotrack/src/Cotrack/backup(三架)/: bebop_track2.cpp  bebop_track3.cpp  bebop_track4.cpp
cotrack/src/Cotrack/backup(三架追动目标)/: bebop_track2.cpp  bebop_track3.cpp  bebop_track4.cpp
cotrack/src/Cotrack/backup(两架)/: bebop_track3.cpp  bebop_track4.cpp
cotrack/src/Cotrack/backup(四架阵型重构)/: bebop_track1.cpp  bebop_track2.cpp  bebop_track3.cpp  bebop_track4.cpp
cotrack/src/KalmanFilter/: KalmanFilter.cpp  KalmanFilter.h  main_kalmanfilter.cpp
cotrack/src/PnPcompare/: RPnP.cpp  RPnP.h  main.cpp  pnpcompare.cpp  pnpcompare_node.cpp
cotrack/src/StateEstimation/: StateEstimation.cpp  StateEstimation.h  main_stateestimation.cpp
cotrack/src/TargetDetection/: TargetDetection.cpp  TargetDetection.h  main_targetdetection.cpp
sh/: 4drone.sh  multi_uavs.sh  multi_uavs_driver.sh  multi_uavs_reconfigure.sh  singleUav.sh
最后的数据/: RPNPTEST-2019-04-26_20-55.txt  cotrack-2019-04-19_17-47.txt  cotrack-2019-04-19_17-52.txt  data-2019-04-26_15-27.txt  data-2019-04-26_15-28.txt  data-2019-04-26_15-29.txt  singletrack-2019-05-15_17-23.txt
